--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,6 +38,7 @@ subjects:
 - !lcsh 'England -- Description and travel'
 - !lcc 'PR'
 - !lcsh 'Dickens, Charles, 1812-1870'
+- GITenberg
 title: "A Week's Tramp in Dickens-Land\r\nTogether with Personal Reminiscences of\
   \ the 'Inimitable Boz' Therein Collected"
 url: http://www.gutenberg.org/ebooks/31394
